Polish on css. Making command buttons correctly left aligned.

--- a/packages/office-ui-fabric-react/src/components/Button/CommandButton/CommandButton.scss
+++ b/packages/office-ui-fabric-react/src/components/Button/CommandButton/CommandButton.scss
@@ -20,6 +20,10 @@ $button-commandButtonHeight: 40px;
   color: $ms-color-neutralPrimary;
 }
 
+.flexContainer {
+  justify-content: flex-start;
+}
+
 .label {
   @include button-core-label-styles;
 }
