--- a/packages/office-ui-fabric-react/src/components/pickers/TagPicker/TagItem.scss
+++ b/packages/office-ui-fabric-react/src/components/pickers/TagPicker/TagItem.scss
@@ -7,8 +7,8 @@
   vertical-align: top;
   background: $ms-color-neutralLighter;
   margin: 1px;
-  height: 28px;
-  line-height: 28px;
+  height: 32px;
+  line-height: 32px;
   vertical-align: top;
   white-space: nowrap;
   cursor: default;
